[metadata]
name = rootbox
description = Portable reproducible environments for Linux applications
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/rootbox
license = MIT
license_file = LICENSE
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3 :: Only
  Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    rootbox = rootbox.__main__:main
